feat: create and invite user init
