# docs/swagger.yaml
@@ -108,9 +108,7 @@ definitions:
       email:
         type: string
       id:
-        type: string
-      password:
-        type: string
+        type: integer
       updated_at:
         type: string
       username:
